// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todos selectors Calculated selectors selectFilteredTodos: Active todos 1`] = `
[
  {
    "completed": false,
    "creationDate": 2020-03-01T00:00:00.000Z,
    "id": 0.3,
    "text": "Learn Jest",
  },
]
`;

exports[`todos selectors Calculated selectors selectFilteredTodos: All todos 1`] = `
[
  {
    "completed": true,
    "creationDate": 2020-01-01T00:00:00.000Z,
    "id": 0.1,
    "text": "Learn Angular",
  },
  {
    "completed": true,
    "creationDate": 2020-02-01T00:00:00.000Z,
    "id": 0.2,
    "text": "Learn NgRx",
  },
  {
    "completed": false,
    "creationDate": 2020-03-01T00:00:00.000Z,
    "id": 0.3,
    "text": "Learn Jest",
  },
]
`;

exports[`todos selectors Calculated selectors selectFilteredTodos: Completed todos 1`] = `
[
  {
    "completed": true,
    "creationDate": 2020-01-01T00:00:00.000Z,
    "id": 0.1,
    "text": "Learn Angular",
  },
  {
    "completed": true,
    "creationDate": 2020-02-01T00:00:00.000Z,
    "id": 0.2,
    "text": "Learn NgRx",
  },
]
`;

exports[`todos selectors Raw selectors 1`] = `
[
  {
    "completed": true,
    "creationDate": 2020-01-01T00:00:00.000Z,
    "id": 0.1,
    "text": "Learn Angular",
  },
  {
    "completed": true,
    "creationDate": 2020-02-01T00:00:00.000Z,
    "id": 0.2,
    "text": "Learn NgRx",
  },
  {
    "completed": false,
    "creationDate": 2020-03-01T00:00:00.000Z,
    "id": 0.3,
    "text": "Learn Jest",
  },
]
`;
